# llm-conductor

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: conductor.py  evaluator.py  memory.py  planner.py
backend/app/api/: chat.py  routes.py  websocket.py
backend/app/conductors/: gpt_conductor.py
backend/app/core/: audio_synthesis.py  feature_extractor.py  ollama_client.py  prompt_builder.py  token_processor.py  track_manager.py  waveform_extractor.py
backend/app/musicians/: midi_llm_musician.py
backend/app/services/: audio.py
backend/app/tests/: test_gpt_conductor.py  test_track_manager.py
docs/: project-overview.md
frontend/: Dockerfile  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentLog.tsx  ComparisonView.tsx  ComposerPanel.tsx  CustomAudioPlayer.tsx  FeatureComparisonTable.tsx  FeatureDisplay.tsx  MidiPlayer.tsx  SimplifiedWaveform.tsx  TrackCard.tsx
frontend/src/hooks/: useGeneration.ts
frontend/src/types/: index.ts
